--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To Our Studio!</div>
+          <div class="intro-lead-in">Welcome To Our project!</div>
           <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
           <a
             class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"
