--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >SWE 363 - Servises</a
+          >SWE 363 - Services</a
         >
         <button
           class="navbar-toggler navbar-toggler-right"
@@ -72,9 +72,9 @@
               >
             </li>
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
             </li>
@@ -126,10 +126,8 @@
               >Request</a
             >
             <p class="text-muted">
-              Fixing and maintaining mechanical equipment, rooms, and machines.
-              Tasks include plumbing work, flooring repair and upkeep,
-              electrical repairs and heating and air conditioning system
-              maintenance.
+              Tasks include plumbing, flooring and upkeep, electrical 
+              repairs and heating and air conditioning maintenance.
             </p>
           </div>
           <div class="col-md-4">
@@ -156,9 +154,8 @@
               >Request</a
             >
             <p class="text-muted">
-              Responsible for mixing, matching, and applying paint to various
-              surfaces, completing touchups, and coordinating large painting
-              projects.
+              Responsible for mixing, matching, and applying paint to surfaces, 
+              touchups, and coordinating large painting projects.
             </p>
           </div>
         </div>
@@ -166,7 +163,7 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <!-- <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -280,7 +277,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Team -->
     <section class="bg-light" id="team">
@@ -289,16 +286,15 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
             <h3 class="section-subheading text-muted">
-              Lorem ipsum dolor sit amet consectetur.
             </h3>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="" />
-              <h4>Kay Garland</h4>
-              <p class="text-muted">Lead Designer</p>
+              <img class="mx-auto rounded-circle" src="img/team/ek.jpg" alt="" />
+              <h4>Elyas Khalaf</h4>
+              <p class="text-muted"></p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -320,9 +316,9 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="" />
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Marketer</p>
+              <img class="mx-auto rounded-circle" src="img/team/os.jpeg" alt="" />
+              <h4>Omar Alshahrani</h4>
+              <p class="text-muted"></p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -344,9 +340,9 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="" />
-              <h4>Diana Pertersen</h4>
-              <p class="text-muted">Lead Developer</p>
+              <img class="mx-auto rounded-circle" src="img/team/fq.jpeg" alt="" />
+              <h4>Faisal Alqarni</h4>
+              <p class="text-muted"></p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -370,9 +366,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <p class="large text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-              eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam
-              corporis ea, alias ut unde.
+            
             </p>
           </div>
         </div>
